--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ a {
 #hero {
     position: relative;
     height: 600px;
-    background: url('/images/background.jpg') center/cover no-repeat;
+    background: url('background.jpg') center/cover no-repeat;
     display: flex;
     flex-direction: column;
     align-items: flex-start; /* Align text to the left */
